# agent-skills

./: ATTRIBUTION.md  CONTRIBUTING.md  README.md  mcp-servers.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: quality.yaml  release.yaml
docs/: INSTALL.md  code-style-foundation.md
scripts/: lint_skills.py  privacy_scan.py  public_api_stability.py  security_scan.py  semantic_release.py  test_privacy_scan.py  test_security_scan.py  test_semantic_release.py  validate_pr_title.py
skills/adaptive-estimation/: SKILL.md
skills/adaptive-loop-budgeting/: SKILL.md
skills/adopt-and-delete/: SKILL.md
skills/adversarial-review/: SKILL.md
skills/agent-drives-ui/: SKILL.md
skills/agent-otel-trajectory/: SKILL.md
skills/agentic-coding-loop/: SKILL.md
skills/agents-as-iac-modules/: SKILL.md
skills/ascii-ui-mockups/: SKILL.md
skills/authoring-html-email/: SKILL.md
skills/authoring-skills-vs-mcp/: SKILL.md
skills/batched-ssh-enumeration/: SKILL.md
skills/c4-architecture/: SKILL.md
skills/challenge-the-premise/: SKILL.md
skills/colocated-pod-tolerations/: SKILL.md
skills/command-creator/: SKILL.md
skills/complexity-budgets/: SKILL.md
skills/context-anchored-patching/: SKILL.md
skills/continuous-issue-resolution/: SKILL.md
skills/credential-proxy/: SKILL.md
skills/declarative-first/: SKILL.md
tests/: conftest.py  test_conformance.py  test_email_triage_skill.py  test_fixtures.py  test_naming.py  test_privacy.py  test_security.py  test_tf_module_layout.py
tools/: naming.py  privacy.py  tf_module_layout.py
(+87 files in other folders)
