[project]
name = "agent-skills"
version = "0.0.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -q"

[tool.coverage.run]
source = ["tools"]

[tool.coverage.report]
fail_under = 85

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "C90"]

[tool.ruff.lint.mccabe]
max-complexity = 10
